# SJ_projekt

./: .gitignore  README.md  main.py  pyproject.toml
file_reader/: file_reader.py
inputs/sample_programs/: PROGRAM1  PROGRAM10  PROGRAM2  PROGRAM3  PROGRAM4  PROGRAM5  PROGRAM6  PROGRAM7  PROGRAM8  PROGRAM9
inputs/user_programs/: EXAMPLEPROG1
lexical_analysis/: config-correct.json  config-skip.json  config.json  main.py
logger/: logger.py
outputs/: readme.txt
syntax_analysis/: config.py  main.py
